--- a/client/src/components/AudioCard/AudioCard.css
+++ b/client/src/components/AudioCard/AudioCard.css
@@ -1,15 +1,16 @@
 h2 {
-  color: #fff;
+  color: #171717;
   text-align: center;
-  font-weight: 400;
+  font-weight: 300;
   margin-bottom: 35px;
+  font-family: "Oswald" sans-serif;
 }
 
 .app-container {
-  width: 700px;
+  width: 600px;
   padding: 0 10px;
-  background-color: #272727;
+  background-color: #fff;
   padding: 30px 50px;
-  border-radius: 10px;
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.479);
+  border-radius: 5px;
+  box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.479);
 }
