--- a/client/src/components/AudioCard/Controls/Button.css
+++ b/client/src/components/AudioCard/Controls/Button.css
@@ -12,14 +12,14 @@
   height: 0;
   border-style: solid;
   border-width: 20px 0 20px 30px;
-  border-color: transparent transparent transparent #ffffff;
+  border-color: transparent transparent transparent #171717;
   cursor: pointer;
 }
 
 .btn-stop {
   height: 40px;
   width: 30px;
-  border-left: 10px solid rgb(255, 255, 255);
-  border-right: 10px solid rgb(255, 255, 255);
+  border-left: 10px solid #171717;
+  border-right: 10px solid #171717;
   cursor: pointer;
 }
