--- a/client/src/components/Generate/Generate.css
+++ b/client/src/components/Generate/Generate.css
@@ -1,4 +1,4 @@
-.app {
+.generate-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -12,18 +12,18 @@
   background-position: center;
 }
 
-form {
+.generate-form {
   background-color: white;
   padding: 0px 60px;
   border-radius: 10px;
 }
 
-h1 {
+.generate-h1 {
   color: #171717;
   text-align: center;
 }
 
-button {
+.generate-button {
   width: 100%;
   height: 50px;
   padding: 10px;
